@@ -154,11 +154,28 @@ void ast_update_use_count(void);
  * description, and usecount values of each particular module.
  *
  * \return the number of modules loaded
+ * \since 13.5.0
  */
 int ast_update_module_list(int (*modentry)(const char *module, const char *description,
                                            int usecnt, const char *status, const char *like,
                                            enum ast_module_support_level support_level),
                            const char *like);
+
+/*!
+ * \brief Ask for a list of modules, descriptions, use counts and status.
+ * \param modentry A callback to an updated function
+ * \param like
+ * \param data Data passed into the callback for manipulation
+ *
+ * For each of the modules loaded, modentry will be executed with the resource,
+ * description, and usecount values of each particular module.
+ *
+ * \return the number of modules loaded
+ */
+int ast_update_module_list_data(int (*modentry)(const char *module, const char *description,
+                                                int usecnt, const char *status, const char *like,
+                                                enum ast_module_support_level support_level,
+                                                void *data), const char *like, void *data);
 
 /*!
  * \brief Check if module with the name given is loaded
